Fixed Tour::exchange, added logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(LinKerninghanAlgorithm)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(LinKerninghanAlgorithm main.cpp Tour.cpp Tour.h TsplibUtils.cpp TsplibUtils.h
-        SimpleHeuristic.cpp SimpleHeuristic.h)
+        SimpleHeuristic.cpp SimpleHeuristic.h LinKerninghanHeuristic.cpp LinKerninghanHeuristic.h)
