--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -pedantic-errors")
 
 add_executable(LinKerninghanAlgorithm main.cpp Tour.cpp Tour.h TsplibUtils.cpp TsplibUtils.h
-        SimpleHeuristic.cpp SimpleHeuristic.h LinKernighanHeuristic.cpp LinKernighanHeuristic.h)
+        SimpleHeuristic.cpp SimpleHeuristic.h LinKernighanHeuristic.cpp LinKernighanHeuristic.h
+        SignedPermutation.cpp SignedPermutation.h)
