--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -pedantic -pedantic-er
 
 add_executable(LinKerninghanAlgorithm main.cpp Tour.cpp Tour.h TsplibUtils.cpp TsplibUtils.h
         SimpleHeuristic.cpp SimpleHeuristic.h LinKernighanHeuristic.cpp LinKernighanHeuristic.h
-        SignedPermutation.cpp SignedPermutation.h PrimsAlgorithm.cpp PrimsAlgorithm.h)
+        SignedPermutation.cpp SignedPermutation.h PrimsAlgorithm.cpp PrimsAlgorithm.h
+        AlphaDistances.cpp AlphaDistances.h)
