Fixed another spelling error and updated README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.13)
-project(LinKerninghanAlgorithm)
+cmake_minimum_required(VERSION 3.8)
+project(LinKernighanAlgorithm)
 
 set(CMAKE_CXX_STANDARD 11)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -pedantic-errors")
@@ -7,7 +7,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -pedantic -pedantic-er
 #set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE "/bin/include-what-you-use;-Xiwyu;any")
 
 
-add_executable(LinKerninghanAlgorithm main.cpp Tour.cpp Tour.h TsplibUtils.cpp TsplibUtils.h
-        SimpleHeuristic.cpp SimpleHeuristic.h LinKernighanHeuristic.cpp LinKernighanHeuristic.h
-        SignedPermutation.cpp SignedPermutation.h PrimsAlgorithm.cpp PrimsAlgorithm.h
+add_executable(LinKernighanAlgorithm main.cpp
+        Tour.cpp Tour.h
+        TsplibUtils.cpp TsplibUtils.h
+        SimpleHeuristic.cpp SimpleHeuristic.h
+        LinKernighanHeuristic.cpp LinKernighanHeuristic.h
+        SignedPermutation.cpp SignedPermutation.h
+        PrimsAlgorithm.cpp PrimsAlgorithm.h
         AlphaDistances.cpp AlphaDistances.h)
