--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(LinKernighanAlgorithm)
 set(CMAKE_CXX_STANDARD 11)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -pedantic-errors")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -pedantic -pedantic-errors")
-#set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE "/bin/include-what-you-use;-Xiwyu;any")
+#set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE "/bin/include-what-you-use;-Xiwyu;iwyu;")
 
 
 add_executable(LinKernighanAlgorithm main.cpp
